--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,12 @@ html {
   scroll-behavior: smooth;
 }
 
+@media only screen and (max-width: 31.25rem) {
+  html {
+    font-size: 50%;
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -93,12 +99,12 @@ body {
   font-weight: 400;
   color: #fff;
   letter-spacing: 2px;
-  /* text-shadow: 1px 1px 1px rgba(0, 0, 0, .5); */
 }
 
 .nav__item--user {
   position: relative;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .nav__item--user:hover .option{
@@ -248,7 +254,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(34, 40, 49, .8);
+  background-color: rgba(34, 40, 49, .9);
   backdrop-filter: blur(2px);
   border-radius: 4px;
   z-index: 1;
@@ -305,12 +311,12 @@ body {
 
 .category__box:hover .category__emojiBg::after {
   backdrop-filter: blur(.5px);
+  background-color: rgba(34, 40, 49, .8);
 }
 
 .category__title,
 .category__detail {
   color: #f4f4f2;
-  text-shadow: 1px 1px 1.5px #222831;
   position: relative;
   z-index: 2;
 }
@@ -346,9 +352,42 @@ body {
   color: #f4f4f2;
 }
 
+@media only screen and (max-width: 31.25rem) {
+  .nav__item:not(:last-child) {
+    display: none;
+  }
+
+  .nav__list {
+    grid-template-columns: 1fr;
+  }
+
+  .header {
+    padding: 0 2.5rem;
+    justify-items: start;
+    grid-gap: 1.5rem;
+  }
+
+  .header__cta {
+    animation: popupBtn .8s ease 1 alternate forwards;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+}
+
 @keyframes popupTitle {
   0% {
     transform: translateY(-4rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes popupBtn {
+  0% {
+    transform: translateY(4rem);
     opacity: 0;
   }
   100% {
